made the footer

--- a/index.html
+++ b/index.html
@@ -102,5 +102,18 @@
       </section>
     </main>
     <!-- added a main section with 4 sections one for the title, bigger project picture, one for the three boxes and one for the three boxes and bigger project picture.-->
+    <footer>
+      <div class="title3">
+        <h2>Contact <span class="indent2">Me!</span></h2>
+      </div>
+
+      <div class="contactways">
+        <h3 class="way1">(571)-295-3297</h3>
+        <h3 class="way1">akabia199597@gmail.com</h3>
+        <h3><a class="way2" href="">GitHub</a></h3>
+        <h3><a class="way2" href="">Twitter</a></h3>
+      </div>
+    </footer>
+    <!-- Added a footer with 2 divs. one for my title of the footer and another for the items.-->
   </body>
 </html>
