--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="projects">
         <section class="bigger">
           <div class="html-java-css">
-            <a href="file:///Users/akabia/first-day/Challenge1/index.html"></a>
+            <a href="https://aakabia.github.io/Challenge1/"></a>
             <h3>
               <span class="space-log">Space Log </span> <br />
               HTML, CSS & JavaScript
